# quatronaut2020

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  rustfmt.toml
.github/workflows/: main.yaml
assets/prefabs/: boss.ron  enemy.ron  flying_enemy.ron  player.ron  player_hyper.ron
assets/sprites/: backgrounds.ron  glass_shards.ron  player_sprites.ron  sprite_sheet.ron  transition.ron
assets/ui/: README.rst  game_over.ron  menu.ron  menu_no_continue.ron  ui.ron  ui_big.ron  you_win.ron
assets/ui/normal/: game_over.ron  menu.ron  menu_no_continue.ron  you_win.ron
assets/ui/retina/: game_over.ron  menu.ron  menu_no_continue.ron  you_win.ron
config/: audio.ron  bindings.ron  display_config.ron  levels.ron
resources/prefabs/: enemy.ron  flying_enemy.ron  player.ron
resources/sprites/: background.ron  enemy_sprites.ron  sprite_sheet.ron
src/: level.rs  main.rs  state.rs
src/components/: cleanup.rs  collider.rs  cutscene.rs  fade.rs  glass.rs  launcher.rs  mod.rs  movement.rs  perspective.rs  tags.rs
src/entities/: enemy.rs  glass.rs  laser.rs  mod.rs  player.rs
src/resources/: audio.rs  direction.rs  fade.rs  gameconfig.rs  handles.rs  level.rs  mod.rs  music.rs  playablearea.rs  playerstats.rs
src/states/: alldone.rs  gameplay.rs  mainmenu.rs  menu.rs  mod.rs  paused.rs  transition.rs
src/systems/: attacked.rs  camera.rs  cleanup.rs  collision.rs  enemy.rs  fade.rs  ghost.rs  glass.rs  laser.rs  mod.rs  movement.rs  player.rs  projectiles.rs
xtask/: Cargo.toml
xtask/src/: main.rs
