[package]
name = "quatronaut2020"
version = "0.1.0"
authors = ["Eric R <eric@chromaticleaves.com>"]
edition = "2018"

[dependencies]
amethyst = "0.15.3"
amethyst_rendy = { version = "0.15.3", features = ["no-slow-safety-checks"] }
derive-new = "0.5.9"
log = { version = "0.4.14", features = ["serde"] }
nalgebra = "0.23"
ncollide2d = "0.31"
serde = { version = "1.0.125", features = ["derive"] }
rand = "0.8.3"

[dev-dependencies]
amethyst_test = "0.15.3"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

[workspace]
members = [
  "xtask",
]
